
    o	The use of UseMethod() with no argument was not documented on
	the help page and is now regarded as an error.

    o	Added colorRamp() and colorRampPalette() for color interpolation.

    o	install.packages() and friends now accept a vector of URLs for
	'CRAN' or 'contriburl' and get the newest available version of
	a package from the first repository on the list in which it is
	found.

    o	New argument 'immediate.' to warning() to send an immediate
	warning.

    o	file.append() has been tuned, including for the case of
	appending many files to a single file.

    o	subset() now has a method for matrices, similar to that for
	data frames.

    o	install.packages() no longer asks if downloaded packages
	should be deleted: they will be deleted at the end of the
	session anyway (and can be deleted by the user at any time).

    o	New function new.packages() to report uninstalled packages
	available at the requested repositories.


UTILITIES

    o	New functions mirror2html() and checkCRAN().

    o	R CMD check has a new option '--use-valgrind'.

    o	tools:::.install_package_code_files() (used to collate R files
	when installing packages) ensures files are separated by a
	line feed.


DOCUMENTATION

    o	File doc/html/faq.html no longer exists, and doc/manual/R-FAQ.html
	(which has active links to other manuals) is used instead.
	(If makeinfo >= 4.5 is not available, the version on CRAN is
	linked to.)

    o	Manual 'Writing R Extensions' has further details on writing
	new front-ends for R using the new public header files.


C-LEVEL FACILITIES

    o	There are new public C/C++ header files Rinterface.h and
	R_ext/RStartup.h for use with external GUIs.


DEPRECATED & DEFUNCT

    o	The aqua module for MacOS X has been removed: --with-aqua now
	refers to the unbundled Cocoa GUI.

    o	Capabilities "bzip2", "GNOME, "libz" and "PCRE" are defunct.

    o	Capability "IEEE754" is deprecated.


INSTALLATION CHANGES
